# netlify-function-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  package.json
.github/: CODEOWNERS
src/: main.rs
