[package]
name = "hello-rs"
version = "0.1.0"
authors = ["Tony Alves <tony@3alves.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlify_lambda_http = "0.1"

tokio = { version = "0.2.4", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
